Github scraper functionality fixed

--- a/templates/accessibility_checker.html
+++ b/templates/accessibility_checker.html
@@ -11,9 +11,10 @@
                     <h3 class="card-title">Accessibility Checker</h3>
                     <p class="card-category">Analyze your code for accessibility compliance.</p>
                 </div>
-                <button id="editor-button" class="btn btn-light text-dark">See in the Editor</button>
-                <button id="chart-button" class="btn btn-light text-dark">Chart</button>
-                <button id="submit-score" class="btn btn-success w-100 mt-3" disabled>Submit Score</button>
+                <button id="editor-button" class="btn btn-light text-white">See in the Editor</button>
+                <button id="chart-button" class="btn btn-light text-white">Chart</button>
+
+
             </div>
 
             <div class="card-body">
