--- a/templates/complexityC_table.html
+++ b/templates/complexityC_table.html
@@ -145,7 +145,7 @@
             <table>
                 <thead>
                 <tr>
-                    <th>Line Number</th>
+                    <th>Line No</th>
                     <th>Line</th>
                     <th>S</th>
                     <th>Tokens</th>
