--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,7 @@
 
                 <!-- Code Analysis Tile -->
                 <div class="col-md-4">
-                    <a href="#" class="tile">
+                    <a href="/analyze-code/" class="tile">
                         <div class="card tile-card bg-gradient-warning text-white shadow-lg animated-tile">
                             <div class="card-body">
                                 <i class="bi bi-bar-chart display-4"></i>
